--- a/src/app/modules/companies/components/companies-page/companies-page.component.scss
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.scss
@@ -18,3 +18,12 @@
 .company-list {
   padding: 16px 24px;
 }
+
+.tg-link {
+  color: rgb(33, 37, 41);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
