--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -32,10 +32,10 @@
           </div>
         </div>
         <div class="small text-muted mt-2">
-          Если какой-то компании нет в списке, напишите в тг
+          Если нужной компании нет в списке, напишите в тг
           <a class="tg-link" href="https://t.me/maximgorbatyuk" target="_blank"
             >&#64;maximgorbatyuk</a
-          >, и компания будет добавлена
+          >, и она будет добавлена
         </div>
       </div>
 
