--- a/src/app/shared/components/go-back-button/go-back-button.component.html
+++ b/src/app/shared/components/go-back-button/go-back-button.component.html
@@ -1,3 +1,3 @@
 <button type="button" class="btn btn-outline-dark small" (click)="goBack()">
-  <span class="small"><i class="bi bi-arrow-left me-1"></i>Назад</span>
+  <span class="small"><i class="bi bi-arrow-left me-1"></i>{{ text }}</span>
 </button>
