--- a/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
+++ b/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
@@ -51,17 +51,33 @@
                 <button
                   *ngIf="item.deletedAt == null"
                   type="button"
-                  class="btn-link-sm text-warning"
+                  class="btn-link-sm text-warning ms-1"
                   (click)="deactivate(item)"
                 >
                   Деактивировать
                 </button>
                 <button
                   type="button"
-                  class="btn-link-sm text-danger"
+                  class="btn-link-sm text-danger ms-1"
                   (click)="delete(item)"
                 >
                   Удалить
+                </button>
+
+                <button
+                  type="button"
+                  class="btn-link-sm ms-1"
+                  (click)="getOpenAiAnalysis(item)"
+                >
+                  Open AI анализ
+                </button>
+
+                <button
+                  type="button"
+                  class="btn-link-sm ms-1"
+                  (click)="getOpenAiReport(item)"
+                >
+                  Open AI данные
                 </button>
               </td>
             </tr>
@@ -155,3 +171,14 @@
   *ngIf="confirmDeletionMessage"
   [message]="confirmDeletionMessage"
 ></app-confirm-dialog>
+
+<app-dialog
+  [show]="!!openAiDialogData"
+  (closed)="onOpenAiDlgClose()"
+  [header]="openAiDialogData?.title ?? 'Open AI'"
+  [additionalCss]="'modal-lg'"
+>
+  <pre class="open-api-json" *ngIf="openAiDialogData">{{
+    openAiDialogData.json
+  }}</pre>
+</app-dialog>
