--- a/src/app/modules/companies/components/add-review-page/add-review-page.component.html
+++ b/src/app/modules/companies/components/add-review-page/add-review-page.component.html
@@ -3,7 +3,7 @@
 <div class="container my-5" *ngIf="company; else dataLoading">
   <div class="card">
     <div class="card-body">
-      <div class="mb-3 text-muted">
+      <div class="mb-3 text-muted small">
         Оставленные отзывы проходят модерацию в течение некоторого времени.
       </div>
 
@@ -186,6 +186,19 @@
         </div>
 
         <div class="mb-3 fst-italic text-muted">* - обязательное поле</div>
+
+        <div class="mb-3 text-muted small">
+          <div class="mb-1">
+            Внимание! Все отзывы проходят модерацию в течение некоторого
+            времени. Не переживайте, если не увидели свой отзыв сразу после
+            добавления на странице компании, нужно немного подождать.
+          </div>
+          <div class="">
+            Отзывы - помощь другим людям узнать больше о компании. Отзыв - это
+            всегда субъективно, однако будьте, пожалуйста, объективны настолько,
+            насколько это возможно.
+          </div>
+        </div>
 
         <div class="mb-3 d-flex justify-content-between">
           <button
