--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -48,6 +48,21 @@
           <i class="bi bi-pencil-fill"></i> Оставить отзыв</a
         >
       </div>
+      <div class="text-muted mt-2 small">
+        <div>
+          Добавленные отзывы появляются в течение некоторого времени после
+          модерации.
+        </div>
+        <div>
+          Не переживайте, если не увидели свой отзыв сразу после добавления на
+          странице компании, нужно немного подождать.
+        </div>
+        <div>
+          Отзывы - помощь другим людям узнать больше о компании. Отзыв - это
+          всегда субъективно, однако будьте, пожалуйста, объективны настолько,
+          насколько это возможно.
+        </div>
+      </div>
     </div>
   </div>
 
