--- a/src/app/modules/admin/components/companies/reviews-to-approve/reviews-to-approve-page.component.html
+++ b/src/app/modules/admin/components/companies/reviews-to-approve/reviews-to-approve-page.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Компании в системе</app-page-header>
+<app-page-header>Ревью на аппрув</app-page-header>
 
 <div class="container my-5" *ngIf="reviews; else dataLoading">
   <div class="card">
