--- a/src/app/modules/admin/components/telegram/telegram-user-settings/telegram-user-settings.component.html
+++ b/src/app/modules/admin/components/telegram/telegram-user-settings/telegram-user-settings.component.html
@@ -20,7 +20,7 @@
             <th>User ID</th>
             <th>Создано</th>
             <th>Обновлено</th>
-            <th></th>
+            <th>Действия</th>
           </thead>
           <tbody>
             <tr class="small" *ngFor="let item of items; let i = index">
