Added prop to table

--- a/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
+++ b/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
@@ -13,14 +13,17 @@
         <table class="table table-hover table-sm">
           <thead class="small">
             <th>Название</th>
-            <th>Chat</th>
-            <th>Специальности</th>
-            <th>No pushes</th>
-            <th>AI анализ</th>
-            <th>Создано</th>
-            <th>Обновлено</th>
-            <th>Удалено</th>
-            <th>Действия</th>
+            <tr class="small">
+              <th>Chat</th>
+              <th>Специальности</th>
+              <th>No pushes</th>
+              <th>AI анализ</th>
+              <th>Последнее сообщение</th>
+              <th>Создано</th>
+              <th>Обновлено</th>
+              <th>Удалено</th>
+              <th>Действия</th>
+            </tr>
           </thead>
           <tbody>
             <tr class="small" *ngFor="let item of items; let i = index">
