--- a/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
+++ b/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
@@ -93,6 +93,11 @@
                         >Open AI данные</a
                       >
                     </li>
+                    <li>
+                      <a class="dropdown-item" (click)="sendUpdates(item)"
+                        >Отправить апдейт</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </td>
