--- a/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
+++ b/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
@@ -11,7 +11,7 @@
           <thead class="small">
             <th>Никнейм</th>
             <th>Кол-во</th>
-            <th>Канал/группа</th>
+            <th>Название</th>
             <th>Канал</th>
             <th>Чат</th>
             <th>Тип</th>
