--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -35,7 +35,7 @@
             &mdash; посмотри в собранной статистике.
           </div>
           <div class="mt-5">
-            <a routerLink="/salaries" class="btn btn-huge btn-primary"
+            <a routerLink="/salaries" class="btn btn-huge btn-purple"
               >Перейти к зарплатам</a
             >
           </div>
@@ -52,6 +52,35 @@
   </div>
 
   <div class="feature">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="feature-title">Отзывы к компаниям в IT</div>
+          <div class="mt-3 feature-subtitle">
+            Поработал в компании и тебе повезло очуться в команде дружелюбных
+            профессионалов? Поделись этим с другими, чтобы и они знали, куда
+            нужно стремиться. Хочешь узнать о компании подробности, пока ждешь
+            оффер? Тебе сюда.
+          </div>
+          <div class="mt-5">
+            <a routerLink="/companies" class="btn btn-huge btn-outline-success"
+              >Перейти к списку компаний</a
+            >
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
+            alt="Main"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="feature bg-white">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -79,7 +108,7 @@
     </div>
   </div>
 
-  <div class="feature bg-white">
+  <div class="feature">
     <div class="container">
       <div class="feature-title">
         Наш проект &mdash; некоммерческий и в свободном доступе.
@@ -123,8 +152,7 @@
         <span class="display-1 fw-bolder">Techinterview.space</span>
       </div>
       <div class="lead">
-        <span class="me-3">Зарплаты в IT.</span>
-        <span>Заметки к техническим интервью.</span>
+        Зарплаты в IT, отзывы, заметки к техническим интервью.
       </div>
     </div>
 
